style(Window): fix 1px gap between actions and content

--- a/src/components/Window/window.module.scss
+++ b/src/components/Window/window.module.scss
@@ -59,6 +59,7 @@
     }
 
     .content {
+        margin-top: -1px;
         flex: 1;
         overflow: hidden;
     }
